--- a/template/pages/index.html
+++ b/template/pages/index.html
@@ -5,6 +5,6 @@
     <title></title>
   </head>
   <body>
-    <h1>Welcome To Django World!Join Us our Project Program</h1>
+    <h1>Welcome To Django World!Join Us our Project Program..we are happy!</h1>
   </body>
 </html>
